--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   "author": "Kaplan Komputing, LLC",
   "license": "ISC",
   "devDependencies": {
+    "babel-polyfill": "^6.9.1",
     "babel-preset-es2015": "^6.9.0",
+    "babel-preset-es2015-native-generators": "^6.6.0",
     "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2"
   }
